tests/sqlite/ui-common/section_wrong_name_in_map.stderr
error: sql_forge!: section `#wrong` is declared in the section map but `{#wrong}` never appears in the SQL
 --> tests/sqlite/tmp-ui/section_wrong_name_in_map.rs:9:9
  |
9 |         "SELECT id, name FROM users {#filter}",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
